clusters/home/apps/tak/cloudtak/app/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cloudtak-internal
  namespace: tak
  annotations:
    external-dns.kubernetes.io/hostname: "cloudtak.layertwo.dev"
    external-dns.kubernetes.io/target: "proxy-internal.layertwo.dev"
    layertwo.dev/publish: "internal"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: internal
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cloudtak.layertwo.dev`)
      kind: Rule
      services:
        - name: cloudtak-api
          port: 5000
